tests/mm0_mmu/fail/bad-sort42.mm0
-- free should be after strict
free strict sort s42;